--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   <body>
     <header class="header"></header>
-    <section class="home-hero">
+    <section class="home-hero" id="up">
       <div class="home-hero__content">
         <h2 class="heading-primary">
           <a
@@ -418,6 +418,7 @@
     <footer class="main-footer"></footer>
 
     <script src="./javascript/components.js"></script>
+    <script src="./javascript/languages.js"></script>
     <script src="./index.js"></script>
   </body>
 </html>
