Add data-translate-key instead of id.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -33,7 +33,12 @@
           </a>
         </h2>
         <div class="home-hero__cta">
-          <a href="./#projects" class="btn btn--bg">Projects</a>
+          <a
+            href="./#projects"
+            class="btn btn--bg"
+            data-translate-key="projects"
+            >Projects</a
+          >
           <a
             href="./assets/pdf/Alan-Hassan-Lebenslauf.pdf"
             class="btn btn--bg downloadBtn"
@@ -129,7 +134,9 @@
     <section id="about" class="about sec-pad">
       <div class="main-container">
         <h2 class="heading heading-sec heading-sec__mb-med">
-          <span class="heading-sec__main">About Me</span>
+          <span class="heading-sec__main" data-translate-key="about"
+            >About Me</span
+          >
           <span class="heading-sec__sub">
             I graduated with a BA in Computer Systems since 2010, I worked for
             four years as a Technical Support Officer in Syria before I had to
