Add about text.

--- a/index.html
+++ b/index.html
@@ -134,18 +134,8 @@
     <section id="about" class="about sec-pad">
       <div class="main-container">
         <h2 class="heading heading-sec heading-sec__mb-med">
-          <span class="heading-sec__main" data-translate-key="about"
-            >About Me</span
-          >
-          <span class="heading-sec__sub">
-            I graduated with a BA in Computer Systems since 2010, I worked for
-            four years as a Technical Support Officer in Syria before I had to
-            emigrate. I am passionate about programming, I learned some
-            programming languages at university such as C, C++, C# and Java.
-            After I moved to Germany I took courses in Web Development and Java
-            Development, I can now describe myself as a Junior MERN-stack /
-            Java-Sowftware developer.
-          </span>
+          <span class="heading-sec__main" data-translate-key="about"></span>
+          <span class="heading-sec__sub" data-translate-key="aboutText"></span>
         </h2>
         <div class="about__content">
           <div class="about__content-main">
