--- a/index.html
+++ b/index.html
@@ -139,32 +139,13 @@
         </h2>
         <div class="about__content">
           <div class="about__content-main">
-            <h3 class="about__content-title">Get to know me!</h3>
-            <div class="about__content-details">
-              <p class="about__content-details-para">
-                Hey! It's
-                <strong>Alan Miste/Hassan</strong>
-                and I'm a
-                <strong> Frontend/MERN-Stack Web Developer </strong> ,<strong>
-                  Java Software Developer
-                </strong>
-                located in Germany. During the period of further education
-                <strong>(Weiterbildung)</strong> within the
-                <strong>
-                  web development course and Java-Sowftware development </strong
-                >, I completed several projects were as a training, in which web
-                development techniques were used, whether for the
-                <strong>front-end</strong> or <strong>back-end</strong>.
-              </p>
-              <p class="about__content-details-para">
-                I'm a bit of a digital product geek. Over the years, I've used
-                hundreds of web and mobile apps. I'm passionate about
-                programming and coding. I also have hobbies in designing and
-                editing photos, in addition to some other hobbies outside the
-                technical field. I am also interested in astronomy. Feel free to
-                <strong>contact</strong> me here.
-              </p>
-            </div>
+            <h3 class="about__content-title" data-translate-key="getToKnow">
+              Lernen Sie mich kennen!
+            </h3>
+            <div
+              class="about__content-details getToKnowMeText"
+              data-translate-key="getToKnowMeText"
+            ></div>
             <a href="./#contact" class="btn btn--med btn--theme dynamicBgClr"
               >Contact</a
             >
