Add translations of project texts.

--- a/index.html
+++ b/index.html
@@ -228,10 +228,10 @@
             </div>
             <div class="projects__row-content">
               <h3 class="projects__row-content-title">Redux Shopping Cart</h3>
-              <p class="projects__row-content-desc">
-                Redux Shopping Cart is a simple Web App, it was just to apply
-                what I learned about Redux Toolkit.
-              </p>
+              <p
+                class="projects__row-content-desc"
+                data-translate-key="reduxShoppingCartHome"
+              ></p>
               <a
                 href="./reduxshoppingcart.html"
                 class="btn btn--med btn--theme dynamicBgClr"
@@ -251,14 +251,10 @@
             </div>
             <div class="projects__row-content">
               <h3 class="projects__row-content-title">AM Blog</h3>
-              <p class="projects__row-content-desc">
-                AM Blog is a simple blogs site, consisting of a "Blogs" page to
-                display all posts, an "About" page, and "New Blog" page to add
-                new posts if the user is logged in. I created a simple sign up
-                and sign in pages, and for authentication I used JWT (JSON Web
-                Tokens). The logged in user can delete there own blogs
-                individually.
-              </p>
+              <p
+                class="projects__row-content-desc"
+                data-translate-key="amBlogHome"
+              ></p>
               <a
                 href="./am-blog.html"
                 class="btn btn--med btn--theme dynamicBgClr"
@@ -278,11 +274,10 @@
             </div>
             <div class="projects__row-content">
               <h3 class="projects__row-content-title">Todo-App-Java</h3>
-              <p class="projects__row-content-desc">
-                Todo-App is a simple application, consisting of a field for
-                entering tasks and three sections for each case, Open, In
-                progress and Done. In addition to a Nav bar.
-              </p>
+              <p
+                class="projects__row-content-desc"
+                data-translate-key="todoJavaAppHome"
+              ></p>
               <a
                 href="./todo-java-app.html"
                 class="btn btn--med btn--theme dynamicBgClr"
@@ -302,10 +297,10 @@
             </div>
             <div class="projects__row-content">
               <h3 class="projects__row-content-title">Cookbook</h3>
-              <p class="projects__row-content-desc">
-                A Cookbook site is a simple site for displaying cooking recipes.
-                I coded it completely (front-end and back-end).
-              </p>
+              <p
+                class="projects__row-content-desc"
+                data-translate-key="cookbookHome"
+              ></p>
               <a
                 href="./project-1.html"
                 class="btn btn--med btn--theme dynamicBgClr"
@@ -324,10 +319,10 @@
             </div>
             <div class="projects__row-content">
               <h3 class="projects__row-content-title">Todo List</h3>
-              <p class="projects__row-content-desc">
-                Todo list app for writing daily tasks. Use your browser to
-                record your daily tasks instead of pen and paper.
-              </p>
+              <p
+                class="projects__row-content-desc"
+                data-translate-key="todoListHome"
+              ></p>
               <a
                 href="./project-2.html"
                 class="btn btn--med btn--theme dynamicBgClr"
