Change dtat-translate-key name.

--- a/spacegeekscorner.html
+++ b/spacegeekscorner.html
@@ -49,7 +49,7 @@
                 class="project-details__content-title"
                 data-translate-key="projectOverview"
               ></h3>
-              <div data-translate-key="projectOverviewText"></div>
+              <div data-translate-key="SpaceGeeksCornerText"></div>
             </div>
             <div class="project-details__tools-used">
               <h3
