Change JS script directory.

--- a/reduxshoppingcart.html
+++ b/reduxshoppingcart.html
@@ -95,7 +95,7 @@
     </section>
     <footer class="main-footer"></footer>
     <script src="./index.js"></script>
-    <script src="./components.js"></script>
+    <script src="./javascript/components.js"></script>
     <script src="./javascript/languages.js"></script>
   </body>
 </html>
