Add other projects translations.

--- a/project-1.html
+++ b/project-1.html
@@ -47,27 +47,19 @@
             />
           </div>
           <div class="project-details__content-main">
-            <div class="project-details__desc">
-              <h3 class="project-details__content-title">Project Overview</h3>
-              <p class="project-details__desc-para">
-                The Cookbook is a simple site for displaying cooking recipes. It
-                was the final project that I submitted in the Full-Stack
-                devlopment Course at Coding School. The main goal of the project
-                is to apply as much of the skills I have learned during the
-                course.
-              </p>
-              <p class="project-details__desc-para">
-                I started with this project from scratch, and since I worked on
-                it over several days for few hours each day, I created cards via
-                Trello, to divide and organize tasks, to know what was needed in
-                the next step and what was done, in other words, to organize the
-                work. I created a wireframe for the project with some initial
-                images and the project's logo, and started coding. I coded both,
-                the frontend and the backend.
-              </p>
-            </div>
+            <h3
+              class="project-details__content-title"
+              data-translate-key="projectOverview"
+            ></h3>
+            <div
+              class="project-details__desc"
+              data-translate-key="cookbookText"
+            ></div>
             <div class="project-details__tools-used">
-              <h3 class="project-details__content-title">Tools Used</h3>
+              <h3
+                class="project-details__content-title"
+                data-translate-key="toolsUsed"
+              ></h3>
               <div class="skills">
                 <div class="skills__skill">HTML</div>
                 <div class="skills__skill">CSS</div>
@@ -85,7 +77,10 @@
               </div>
             </div>
             <div class="project-details__links">
-              <h3 class="project-details__content-title">See Live</h3>
+              <h3
+                class="project-details__content-title"
+                data-translate-key="seeLive"
+              ></h3>
               <a
                 href="https://cbreact.herokuapp.com"
                 class="btn btn--med btn--theme project-details__links-btn"
@@ -105,6 +100,7 @@
     </section>
     <footer class="main-footer"></footer>
     <script src="./index.js"></script>
-    <script src="./components.js"></script>
+    <script src="./javascript/components.js"></script>
+    <script src="./javascript/languages.js"></script>
   </body>
 </html>
