--- a/todo-java-app.html
+++ b/todo-java-app.html
@@ -42,30 +42,19 @@
             />
           </div>
           <div class="project-details__content-main">
-            <div class="project-details__desc">
-              <h3 class="project-details__content-title">Project Overview</h3>
-              <p class="project-details__desc-para">
-                Todo-App is a simple application, consisting of a field for
-                entering tasks and three sections for each case, Open, In
-                progress and Done. In addition to a Nav bar. Entered tasks are
-                "Open" by default. The task will be listed in the "Open" menu,
-                for each task there will be three buttons: Delete, Edit and
-                Advance.
-              </p>
-              <ul class="project-details__desc-para">
-                <li>- Delete: to delete the task.</li>
-                <li>- Edit: to move the task between the three lists.</li>
-                <li>- Advance : to pass the task to the next list.</li>
-              </ul>
-              <p class="project-details__desc-para">
-                <strong
-                  >I haven't linked the app to a database, so the entries remain
-                  until the session is terminated.</strong
-                >
-              </p>
-            </div>
+            <h3
+              class="project-details__content-title"
+              data-translate-key="projectOverview"
+            ></h3>
+            <div
+              class="project-details__desc"
+              data-translate-key="todoJavaAppText"
+            ></div>
             <div class="project-details__tools-used">
-              <h3 class="project-details__content-title">Tools Used</h3>
+              <h3
+                class="project-details__content-title"
+                data-translate-key="toolsUsed"
+              ></h3>
               <div class="skills">
                 <div class="skills__skill">Java</div>
                 <div class="skills__skill">Spring Framework</div>
@@ -79,7 +68,10 @@
               </div>
             </div>
             <div class="project-details__links">
-              <h3 class="project-details__content-title">See Live</h3>
+              <h3
+                class="project-details__content-title"
+                data-translate-key="seeLive"
+              ></h3>
               <a
                 href=""
                 class="btn btn--med btn--theme project-details__links-btn"
@@ -99,6 +91,7 @@
     </section>
     <footer class="main-footer"></footer>
     <script src="./index.js"></script>
-    <script src="./components.js"></script>
+    <script src="./javascript/components.js"></script>
+    <script src="./javascript/languages.js"></script>
   </body>
 </html>
