--- a/todo-java-app.html
+++ b/todo-java-app.html
@@ -24,7 +24,12 @@
       <div class="project-cs-hero__content">
         <h1 class="heading-primary">Todo-App-Java</h1>
         <div class="project-cs-hero__cta">
-          <a href="" class="btn btn--bg" target="_blank">Live Link</a>
+          <a
+            href="./todo-java-app.html#seeLive"
+            class="btn btn--bg"
+            target="_blank"
+            >Live Link</a
+          >
         </div>
         <div class="home-hero__mouse-scroll-cont">
           <div class="mouse"></div>
@@ -67,17 +72,21 @@
                 <div class="skills__skill">Git/Github</div>
               </div>
             </div>
-            <div class="project-details__links">
+            <div id="seeLive" class="project-details__links">
               <h3
                 class="project-details__content-title"
                 data-translate-key="seeLive"
               ></h3>
+              <p
+                class="project-details__desc-para"
+                data-translate-key="seeLiveText"
+              ></p>
               <a
-                href=""
+                href="https://youtu.be/sHZPnBe0aKs"
                 class="btn btn--med btn--theme project-details__links-btn"
                 target="_blank"
-                >Live Link</a
-              >
+                data-translate-key="goToVideo"
+              ></a>
               <a
                 href="https://github.com/alanmiste/todo-java"
                 class="btn btn--med btn--theme-inv project-details__links-btn"
