Delete _blank from Live Link.

--- a/todo-java-app.html
+++ b/todo-java-app.html
@@ -24,10 +24,7 @@
       <div class="project-cs-hero__content">
         <h1 class="heading-primary">Todo-App-Java</h1>
         <div class="project-cs-hero__cta">
-          <a
-            href="./todo-java-app.html#seeLive"
-            class="btn btn--bg"
-            target="_blank"
+          <a href="./todo-java-app.html#seeLive" class="btn btn--bg"
             >Live Link</a
           >
         </div>
