Add used tools.

--- a/lotto-tipp.html
+++ b/lotto-tipp.html
@@ -57,13 +57,8 @@
               ></h3>
               <div class="skills">
                 <div class="skills__skill">Java</div>
-                <div class="skills__skill">Spring Framework</div>
                 <div class="skills__skill">Maven</div>
-                <div class="skills__skill">TypeScript</div>
-                <div class="skills__skill">React</div>
-                <div class="skills__skill">HTML</div>
-                <div class="skills__skill">CSS</div>
-                <div class="skills__skill">RestAPIs</div>
+                <div class="skills__skill">Unit Test</div>
                 <div class="skills__skill">Git/Github</div>
               </div>
             </div>
