Add LG-Users folder link.

--- a/lotto-tipp.html
+++ b/lotto-tipp.html
@@ -69,16 +69,16 @@
               ></h3>
               <p
                 class="project-details__desc-para"
-                data-translate-key="seeLiveText"
+                data-translate-key="lottoTippSeeLiveText"
               ></p>
               <a
-                href="https://youtu.be/sHZPnBe0aKs"
+                href="https://github.com/alanmiste/LottoGenerator/tree/master/LG-Users"
                 class="btn btn--med btn--theme project-details__links-btn"
                 target="_blank"
-                data-translate-key="goToVideo"
-              ></a>
+                >LG-Users</a
+              >
               <a
-                href="https://github.com/alanmiste/todo-java"
+                href="https://github.com/alanmiste/LottoGenerator"
                 class="btn btn--med btn--theme-inv project-details__links-btn"
                 target="_blank"
                 >Code Link</a
