Add lotto-tipp project.

--- a/index.html
+++ b/index.html
@@ -242,6 +242,29 @@
           <div class="projects__row">
             <div class="projects__row-img-cont">
               <img
+                src="./assets/jpeg/lotto-tipp-screenshot.jpg"
+                alt="Lotto Tipp Screenshot"
+                class="projects__row-img"
+                loading="lazy"
+              />
+            </div>
+            <div class="projects__row-content">
+              <h3 class="projects__row-content-title">Lotto Tipp Generator</h3>
+              <p
+                class="projects__row-content-desc"
+                data-translate-key="lottoTippHome"
+              ></p>
+              <a
+                href="./lotto-tipp.html"
+                class="btn btn--med btn--theme dynamicBgClr"
+                data-translate-key="more"
+              ></a>
+            </div>
+          </div>
+
+          <div class="projects__row">
+            <div class="projects__row-img-cont">
+              <img
                 src="./assets/jpeg/am-blog-screenshot.jpg"
                 alt="My-Blog Screenshot"
                 class="projects__row-img"
