Update welcome text.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,18 @@
             href=""
             class="typewrite"
             data-period="2000"
-            data-type='[ "Hey there! 👋", "I&apos;m Alan 😊.","IT Engineer","Java-Sowftware Developer","MERN-Stack Developer","Front-End Developer", "I ❤️️ Coding.","I ❤️️ Technology" , "I ❤️️ Design."]'
+            data-type='[
+  "Hallo || Hello → 👋",
+  "I&apos;m Alan 😊.",
+  "IT Specialist 💻",
+  "System Administrator 🖥️",
+  "Windows & Linux Enthusiast ⚙️",
+  "Zertifizierter || Certified IT-Administrator (IHK) 🎓",
+  "Software & Web entwicklung || Development 💡",
+  "Always exploring. Always improving. 🚀",
+ "Immer am Entdecken. Immer am Verbessern. 🚀"
+]
+'
           >
             <span class="wrap"></span>
           </a>
