--- a/index.html
+++ b/index.html
@@ -167,28 +167,43 @@
           </div>
           <div class="about__content-skills">
             <h3 class="about__content-title" data-translate-key="mySkills"></h3>
-            <div class="skills">
-              <div class="skills__skill">Java</div>
-              <div class="skills__skill">Spring Framework</div>
-              <div class="skills__skill">TypeScript</div>
-              <div class="skills__skill">JavaScript - ES6</div>
-              <div class="skills__skill">React</div>
-              <div class="skills__skill">Python</div>
-              <div class="skills__skill">HTML</div>
-              <div class="skills__skill">CSS</div>
-              <div class="skills__skill">SASS</div>
-              <div class="skills__skill">Rest APIs</div>
-              <div class="skills__skill">GIT/Github</div>
-              <div class="skills__skill">CI/CD</div>
-              <div class="skills__skill">MongoDB</div>
-              <div class="skills__skill">MySql</div>
-              <div class="skills__skill">Node.js</div>
-              <div class="skills__skill">Docker</div>
-              <div class="skills__skill">Wordpress</div>
-              <div class="skills__skill">Photoshop</div>
-              <div class="skills__skill">Illustrator</div>
-              <div class="skills__skill">Lightroom</div>
-            </div>
+           <div class="skills">
+  <!-- Core IT-System Administration -->
+  <div class="skills__skill">Windows Server Administration</div>
+  <div class="skills__skill">Linux System Administration</div>
+  <div class="skills__skill">Active Directory / Group Policy</div>
+  <div class="skills__skill">Microsoft 365 / Exchange</div>
+  <div class="skills__skill">Network Configuration (LAN/WAN/VPN)</div>
+  <div class="skills__skill">Virtualization (VMware / Hyper-V)</div>
+  <div class="skills__skill">Cloud Administration (Azure)</div>
+  <div class="skills__skill">ITIL 4 Service Management</div>
+  <div class="skills__skill">IT Security & Data Protection (GDPR)</div>
+  <div class="skills__skill">Backup & Recovery</div>
+  <div class="skills__skill">Monitoring & Troubleshooting</div>
+
+  <!-- Programming & Automation -->
+  <div class="skills__skill">Scripting (PowerShell / Bash)</div>
+  <div class="skills__skill">Python</div>
+  <div class="skills__skill">Java</div>
+  <div class="skills__skill">JavaScript / TypeScript</div>
+  <div class="skills__skill">REST APIs</div>
+
+  <!-- Tools & DevOps -->
+  <div class="skills__skill">Git / GitHub</div>
+  <div class="skills__skill">CI/CD</div>
+  <div class="skills__skill">Docker</div>
+
+  <!-- Databases -->
+  <div class="skills__skill">MySQL</div>
+  <div class="skills__skill">MongoDB</div>
+
+  <!-- Additional Skills -->
+  <div class="skills__skill">WordPress</div>
+  <div class="skills__skill">Photoshop</div>
+  <div class="skills__skill">Lightroom</div>
+  <div class="skills__skill">Illustrator</div>
+</div>
+
           </div>
         </div>
       </div>
